k8s/out.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"graphrag-ui","app.kubernetes.io/component":"graphrag-ui","app.kubernetes.io/instance":"graphrag-ui","app.kubernetes.io/name":"graphrag-ui"},"name":"graphrag-ui","namespace":"g-shama-graphrag-dev"},"spec":{"replicas":1,"revisionHistoryLimit":3,"selector":{"matchLabels":{"app":"graphrag-ui","deployment":"graphrag-ui"}},"strategy":{"activeDeadlineSeconds":21600,"resources":{"limits":{"memory":"4000Mi"}}, [...]
  creationTimestamp: "2026-02-13T22:13:12Z"
  generation: 3
  labels:
    app: graphrag-ui
    app.kubernetes.io/component: graphrag-ui
    app.kubernetes.io/instance: graphrag-ui
    app.kubernetes.io/name: graphrag-ui
  name: graphrag-ui
  namespace: g-shama-graphrag-dev
  resourceVersion: "4549012696"
  uid: f541f882-9f6a-4b03-ae7d-d9cc1d4f7754
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: graphrag-ui
      deployment: graphrag-ui
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-03-09T14:00:08-04:00"
      creationTimestamp: null
      labels:
        app: graphrag-ui
        deployment: graphrag-ui
    spec:
      containers:
      - env:
        - name: GRAPHRAG_API_KEY
          valueFrom:
            secretKeyRef:
              key: api-key
              name: graphrag-api-key
        - name: EMBEDDING_API_KEY
          valueFrom:
            secretKeyRef:
              key: api-key
              name: embedding-api-key
        - name: ALLOW_HTTP
          value: "true"
        - name: AWS_REGION
          value: dummy
        - name: AWS_ENDPOINT
          valueFrom:
            secretKeyRef:
              key: url
              name: aws-endpoint
        - name: AWS_ACCESS_KEY_ID
          valueFrom:
            secretKeyRef:
              key: key
              name: aws-access-key-id
        - name: AWS_SECRET_ACCESS_KEY
          valueFrom:
            secretKeyRef:
              key: key
              name: aws-secret-access-key-id
        - name: DB_URI
          value: s3://shama-graphrag-dev
        image: image-registry.openshift-image-registry.svc:5000/g-shama-graphrag-dev/graphrag-ui
        imagePullPolicy: Always
        name: graphrag-ui
        ports:
        - containerPort: 8501
          name: streamlit-port
          protocol: TCP
        resources:
          limits:
            cpu: "4"
            memory: 8Gi
          requests:
            cpu: "2"
            memory: 4Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: graphrag-pvc
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: graphrag-pvc
        persistentVolumeClaim:
          claimName: graphrag-pvc
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-03-09T19:01:03Z"
    lastUpdateTime: "2026-03-09T19:02:20Z"
    message: ReplicaSet "graphrag-ui-6c59c954b4" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2026-03-09T19:16:03Z"
    lastUpdateTime: "2026-03-09T19:16:03Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 3
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
