k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphrag-ui-service
  namespace: g-shama-graphrag-dev
  labels:
    app: graphrag-ui
  annotations:
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: streamlit-clusterip
      port: 8501
      targetPort: streamlit-port
  selector:
    app: graphrag-ui
